chore: minor capitalization fix

--- a/tutorial/2021-07-05-comparing-questdb-timescaledb-influxdb.mdx
+++ b/tutorial/2021-07-05-comparing-questdb-timescaledb-influxdb.mdx
@@ -1,9 +1,9 @@
 ---
-title: Comparing InfluxDB, TimescaleDB, and QuestDB Timeseries Databases
+title: Comparing InfluxDB, TimescaleDB, and QuestDB timeseries databases
 author: Yitaek Hwang
 description:
   A high-level overview of timeseries databases to compare features,
-  functionality, maturity, and performance
+  functionality, maturity, and performance.
 image: /img/tutorial/shared/og-influxdb-timescaledb.png
 featured: true
 ---
@@ -53,7 +53,7 @@ store timestamped data. Such data may include metrics from servers and
 applications, readings from IoT sensors, user interaction on a website or an
 app, or trading activity on financial markets.
 
-The following properties usually characterize Timeseries workloads:
+The following properties usually characterize timeseries workloads:
 
 - Each data point includes a timestamp used to index, aggregate, and sample.
   This data can also be multi-dimensional and correlated.
