chore: add introduction and author credit

--- a/tutorial/2021-09-05-telegraf-and-questdb-for-storing-metrics-in-a-timeseries-database.mdx
+++ b/tutorial/2021-09-05-telegraf-and-questdb-for-storing-metrics-in-a-timeseries-database.mdx
@@ -18,6 +18,15 @@ import Screenshot from "@theme/Screenshot"
   width={770}
 />
 
+This tutorial is written by [Gábor Boros](https://github.com/gabor-boros), who
+has put together some great examples of using Telegraf as a means of collecting
+and sending system metrics as time series data to QuestDB for analysis and
+visualization.
+
+Thanks Gábor for the awesome contribution!
+
+## Introduction
+
 Telegraf is a plugin-driven server agent for collecting, processing,
 aggregating, and writing metrics. With
 [more than 200 plugins](https://docs.influxdata.com/telegraf/v1.19/plugins/), it
