chore: minor updates to charts

--- a/blog/2019-12-19-lineprot.md
+++ b/blog/2019-12-19-lineprot.md
@@ -27,8 +27,8 @@ ourselves to build a receiver for ILP, which stores data faster than InfluxDB
 while being hardware efficient.
 
 **Update 09-07-2021:** Our community contributor Yitaek Hwang has put together
-an article looking at
-[comparing InfluxDB, TimescaleDB and QuestDB](/tutorial/2021/07/05/comparing-questdb-timescaledb-influxdb)
+an article which
+[compares InfluxDB, TimescaleDB and QuestDB](/tutorial/2021/07/05/comparing-questdb-timescaledb-influxdb)
 which may be useful for an up-to-date feature overview.
 
 ## Why does QuestDB now support InfluxDB line protocol?
@@ -40,7 +40,7 @@ keeping the flexibility of ILP.
 import Screenshot from "@theme/Screenshot"
 
 <Screenshot
-  alt="A diagram showing how QuestDB ingesting schema-agnostic InfluxDB line protocol and relational data"
+  alt="A diagram showing QuestDB ingesting schema-agnostic InfluxDB line protocol and relational data"
   height={591}
   src="/img/tutorial/2021-07-05/questdb-influxdb-postgres-join.png"
   width={770}
@@ -109,7 +109,7 @@ that InfluxDB slows down our UDP sender by cannibalizing the CPU. Here is what
 happens to your CPUs while using InfluxDB:
 
 <Screenshot
-  alt="Bar chart showing the CPU usage of InfluxDB, idle vs on load"
+  alt="Bar chart showing the CPU usage of InfluxDB, idle versus under load"
   height={591}
   src="/img/blog/2019-12-19/impliedSpeed.png"
   width={770}
@@ -190,4 +190,3 @@ Telegraf, you can configure the UDP sender for QuestDB's address and port.
 Follow this link to [download QuestDB](/get-questdb/). You can also use our
 [sender]({@githubUrl@}/blob/master/benchmarks/src/main/java/org/questdb/LineUDPSenderMain.java)
 against QuestDB and InfluxDB to reproduce the experiment.
-
