chore: minor fixes for careers pages

--- a/src/pages/careers/backend-software-engineer.mdx
+++ b/src/pages/careers/backend-software-engineer.mdx
@@ -1,5 +1,5 @@
 ---
-title: Software Engineer Backend, Careers
+title: Software Engineer, Backend
 description:
   Join QuestDB as a Backend Software Engineer and build functionality and
   features for the fastest open source time series database.
