--- a/src/pages/careers/head-of-developer-relations.mdx
+++ b/src/pages/careers/head-of-developer-relations.mdx
@@ -1,5 +1,5 @@
 ---
-title: Head of Developer Relations, Careers
+title: Head of Developer Relations
 description:
   Join QuestDB as Head of Developer Relations and grow the developer community
   of the fastest open source time series database.
