--- a/src/pages/careers/senior-cloud-engineer.mdx
+++ b/src/pages/careers/senior-cloud-engineer.mdx
@@ -1,5 +1,5 @@
 ---
-title: Senior Cloud Engineer, Careers
+title: Senior Cloud Engineer
 description:
   Join QuestDB as a Senior Cloud Engineer and build the infrastructure
   supporting the fastest open source time series database.
