--- a/src/pages/careers/technical-content-writer.mdx
+++ b/src/pages/careers/technical-content-writer.mdx
@@ -1,5 +1,5 @@
 ---
-title: Technical Content Writer, Careers
+title: Technical Content Writer
 description:
   Join QuestDB as a Technical Content Writer to create documentation for the
   fastest open source time series database.
