--- a/src/pages/careers/developer-relations-engineer.mdx
+++ b/src/pages/careers/developer-relations-engineer.mdx
@@ -1,5 +1,5 @@
 ---
-title: Developer Relations Engineer, Careers
+title: Developer Relations Engineer
 description:
   Join QuestDB as a Developer Relations Engineer to inspire and grow developer
   communities using the fastest open source time series database.
