--- a/src/pages/careers/front-end-engineer.mdx
+++ b/src/pages/careers/front-end-engineer.mdx
@@ -1,5 +1,5 @@
 ---
-title: Lead Software Engineer Frontend, Careers
+title: Lead Software Engineer, Frontend
 description:
   Join QuestDB as Lead Software Engineer, Frontend to improve user experience
   for the fastest open source time series database.
