docs: reorder blog sections, minor edit

--- a/blog/2021-07-16-release-6-0-4.md
+++ b/blog/2021-07-16-release-6-0-4.md
@@ -1,5 +1,5 @@
 ---
-title: QuestDB version 6.0.4
+title: QuestDB 6.0.4 July release, Prometheus metrics support
 author: Brian Smith
 author_title: QuestDB Team
 author_url: https://github.com/bsmth
@@ -36,21 +36,6 @@ feedback on its use. The addition of monitoring using Prometheus will simplify
 how users gain insights into the performance and activity of deployed instances
 of QuestDB.
 
-### SQL performance improvements
-
-We gathered user feedback on the most critical query types that require faster
-execution speed, and we have improved `LATEST BY` handling internally. These
-enhancements are possible by massively parallelizing how these operations are
-executed and optimizing aggregate calculations within sampled groups. Users will
-see these improvements with the following two query types:
-
-```questdb-sql
--- indexed columns
-SELECT * FROM my_table LATEST BY indexed_col;
--- indexed columns with filtering using WHERE
-SELECT * FROM my_table LATEST BY indexed_col WHERE other_col > 9000;
-```
-
 ### SAMPLE BY with calendar alignment
 
 It's now possible to perform `SAMPLE BY` queries where the sampled groups align
@@ -70,6 +55,21 @@ ALIGN TO CALENDAR TIME ZONE {tz_id} WITH OFFSET
 
 For more information on using calendar alignment with sampled groups, see the
 [SAMPLE BY documentation](/docs/reference/sql/sample-by/#align-to-calendar).
+
+### SQL performance improvements
+
+We gathered user feedback on the most critical query types that require faster
+execution speed, and we have improved `LATEST BY` handling internally. These
+enhancements are possible by massively parallelizing how these operations are
+executed and optimizing aggregate calculations within sampled groups. Users will
+see these improvements with the following two query types:
+
+```questdb-sql
+-- indexed columns
+SELECT * FROM my_table LATEST BY indexed_col;
+-- indexed columns with filtering using WHERE
+SELECT * FROM my_table LATEST BY indexed_col WHERE other_col > 9000;
+```
 
 ### Prometheus metrics
 
