docs: bump software release version

--- a/blog/2021-07-16-release-6-0-4.md
+++ b/blog/2021-07-16-release-6-0-4.md
@@ -129,15 +129,16 @@ cannot predate epoch 0 in UTC, disallowing pre-1970 values.
 
 ## How to run QuestDB 6.0.4
 
-The release has been published to
-[Docker Hub](https://hub.docker.com/r/questdb/questdb/tags?page=1&ordering=last_updated)
-and can be pulled with the following command:
+The release notes including a changelog is
+[available on GitHub](https://github.com/questdb/questdb/releases/tag/6.0.4) and
+this version has been published to
+[Docker Hub](https://hub.docker.com/r/questdb/questdb/tags?page=1&ordering=last_updated):
 
 ```bash
 docker pull questdb/questdb:6.0.4
 ```
 
-To start up this version, use `docker run`:
+To start up QuestDB, use `docker run`:
 
 ```bash
 docker run -p 9000:9000 -p 8812:8812 -p 9009:9009 \
@@ -148,7 +149,7 @@ docker run -p 9000:9000 -p 8812:8812 -p 9009:9009 \
 
 We are now trying out
 [GitHub discussions](https://github.com/questdb/questdb/discussions) as a way to
-get the conversation about QuestDB started! We have some great topics started so
+get the conversation about QuestDB started! We have some great topics already so
 far since we activated this feature, and we expect this to be a fun and easy way
 to get involved on GitHub with open-ended discussions.
 
